2009-10-15  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Gustavo Noronha.

        https://bugs.webkit.org/show_bug.cgi?id=30002

        implement cancelLoad

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivate::cancelLoad):

2009-10-15  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

        Reviewed by Gustavo Noronha.

        https://bugs.webkit.org/show_bug.cgi?id=30353
        
        Fix race condition, leading to a deadlock

        * platform/graphics/gtk/VideoSinkGStreamer.cpp:
        (webkit_video_sink_timeout_func):
        (webkit_video_sink_render):
        (unlock_buffer_mutex):
        (webkit_video_sink_unlock):
        (webkit_video_sink_unlock_stop):
        (webkit_video_sink_stop):
        (webkit_video_sink_start):
        (webkit_video_sink_class_init):
        Fix race condition in unlock/render that would lead to deadlocks.

2009-10-15  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

        Reviewed by Gustavo Noronha.

        https://bugs.webkit.org/show_bug.cgi?id=30374
        
        Check if caps are valid before parsing them

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivate::duration):
        Check if caps are valid before parsing them in ::naturalSize().
        This prevents assertions if the natural size should be calculated
        before the video caps are negotiated.

2009-10-15  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Gustavo Noronha.

        https://bugs.webkit.org/show_bug.cgi?id=30006
        [GStreamer] Unnecessary checks for Messages types in callbacks

        refactored gst message callbacks into a single one

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::mediaPlayerPrivateMessageCallback):
        (WebCore::do_gst_init):
        (WebCore::MediaPlayerPrivate::duration):